<resources>
    <string name="app_name">AppW4</string>
    <string name="ErrorMsgAdd">Error al agregar la información.</string>
    <string name="ErrorMsgUpdate">Error al actualizar la información.</string>
    <string name="ErrorMsgRemove">Error al eliminar la información</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos.</string>
    <string name="ErrorMsgGetById">Error al obtener dato especifico.</string>
    <string name="MsgDataNotFound">El dato no fue encontrado</string>
    <string name="Addbtn_main">Agregar dato</string>
    <string name="TextID">ID</string>
    <string name="TextName">Nombre</string>
    <string name="TextFLastname">Primer apellido</string>
    <string name="TextSLastName">Segundo apellido</string>
    <string name="TextEmail">Correo</string>
    <string name="TextPhone">Teléfono</string>
    <string name="TextBirthdate">Fecha de Nacimiento</string>
    <string name="TextProvince">Provincia</string>
    <string name="TextState">Canton</string>
    <string name="TextDistrict">Distrito</string>
    <string name="TextAddress">Direccion</string>
    <string name="Savebtn_person">Guardar</string>
    <string name="TextYes">Sí</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Pregunta...</string>
    <string name="MsgDeleteSuccess">La información se ha borrado</string>
    <string name="MsgSaveSuccess">La información se ha guardado</string>
    <string name="TextDeleteQuestion">¿Desea eliminar la información?</string>
    <string name="TextSaveQuestion">¿Desea guardar la información?</string>
    <string name="MsgDuplicateDate">La información es duplicada</string>
</resources>